--- a/index.html
+++ b/index.html
@@ -2,15 +2,23 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Blue Sapphire</title>
+    <title>Personal Site</title>
+    <link rel="icon" href="favicon.ico">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap" rel="stylesheet">
   </head>
-  <body>
-
-    <img src="umair.png" alt="Oops!!">
+<body>
+  <div class="top">
+    <img class="profile" src="profile.png" alt="Oops!!" class="picture">
+    </div>
     <h1>Umair Falak</h1>
-    <p><em>Studying Bachelors of Computer Science at <strong><a href="https://gcuf.edu.pk/">GCUF</a></strong>.</em></p>
-    <p>My self <strong>Umair Falak Sher</strong>. Doing BS <em>Computer Science</em> from <strong><a href="https://gcuf.edu.pk/">Government College University Faisalabad</a></strong>. I have done my Matric from a <em>reputed</em> Institute named as <strong>MMH School Sheikhupura</strong>. I have passed my intermediate degree in <strong>Engineering</strong> from well structured college named as <strong>Punjab Group of Colleges</strong>. </p>
+    <p class="intro"><em><strong>Studying Bachelors of Computer Science at</strong> <strong><a href="https://gcuf.edu.pk/">GCUF</a></strong>.</em></p>
+    <p class="intro2">My self <strong>Umair Falak Sher</strong>. Doing BS <em>Computer Science</em> from <strong><a href="https://gcuf.edu.pk/">Government College University Faisalabad</a></strong>. I have done my Matric from a <em>reputed</em> Institute named as <strong>MMH School Sheikhupura</strong>. I have passed my intermediate degree in <strong>Engineering</strong> from well structured college named as <strong>Punjab Group of Colleges</strong>. </p>
     <hr>
+    <img class="E-image" src="education.png" alt="">
     <h3>Educational Background</h3>
     <ul>
       <li>Matric from MMH School</li>
@@ -18,6 +26,8 @@
       <li>BSCS from <strong><a href="https://gcuf.edu.pk/">GCUF</a></strong></li>
       </ul>
       <hr>
+      <div class="HOBBIOES">
+      <img class="H-image" src="hobbies.png" alt="">
       <h3>Hobbies</h3>
       <ol>
         <li>Cricket</li>
@@ -27,9 +37,12 @@
         <li>Programming</li>
         <li>Motorcycling</li>
       </ol>
+      </div>
       <hr>
+      <div class="JOB-TITLE">
+      <img class="J-image" src="job.png" alt="">
       <h3>Job Title</h3>
-      <table border="1">
+      <table class="table1" border="1" >
         <tr>
           <td>2019</td>
           <td>GD Internee</td>
@@ -43,9 +56,12 @@
           <td>Media Director MLCA</td>
         </tr>
       </table>
+      </div>
       <hr>
-      <h3>Skills</h3>
-      <table cellspacing="5" border="1">
+      <div class="SKILLS">
+      <img class="S-image" src="skills.png" alt="">
+      <h3 class="skills">Skills</h3>
+      <table class="table2" cellspacing="5" border="1">
         <tr>
           <td>C++</td>
           <td>⭐⭐⭐</td>
@@ -59,9 +75,13 @@
           <td>⭐⭐⭐⭐</td>
         </tr>
       </table>
+      </div>
        <hr>
-      <a href="work.html"> <strong>Work Experience</strong></a>
+      <div class="bottom">
+      <a class="btn" href="work.html"> <strong>Work Experience</strong></a>
       <hr>
-      <a href="contact.html"><strong>Contact Me</strong></a>
+      <a class="btn2" href="contact.html"><strong>Contact Me</strong></a>
+      </div>
   </body>
+
 </html>
